# misc

./: AppData.cpp  BoundsCheckedCast.cpp  Break.cpp  Break.h  CMakeLists.txt  CircularArray.cpp  CircularArray.h  FunctionHelpers.cpp  IOWrapped.cpp  LimitChecks.cpp  LimitChecks.h  Log.cpp  Logger.cpp  Logger.h  Matrix3Transform.cpp  Misc.cpp  Num.cpp  Num.h  OpenUrl.cpp  OpenUrl.h  Option.cpp  PathManager.cpp  PeriodAverage.cpp  PeriodAverage.h  Periodic.cpp  QueryPerformance.cpp  Rectangle.cpp  StringHelpers.cpp  Timer.cpp  Timer.h  UpdatedCache.cpp
include/misc/: AppData.h  BoundsCheckedCast.h  Break.h  CircularArray.h  Enums.h  FilterUnique.h  FunctionHelpers.h  IOWrapped.h  LimitChecks.h  Log.h  Logger.h  Matrix3Transform.h  Misc.h  Num.h  NumHelpers.h  OpenUrl.h  Option.h  PathManager.h  PeriodAverage.h  Periodic.h  QueryPerformance.h  Rectangle.h  StringHelpers.h  Timer.h  UpdatedCache.h
src/: Log.cpp  NumHelpers.cpp  Option.cpp  PathManager.cpp  Rectangle.cpp  StringHelpers.cpp  UpdatedCache.cpp
